[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-memstate"
version = "0.2.0"
description = "LangChain & LangGraph integration for Memstate AI — structured, versioned, semantic memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Memstate AI", email = "hello@memstate.ai" }]
keywords = [
    "langchain",
    "langgraph",
    "memory",
    "ai",
    "agents",
    "memstate",
    "llm",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://memstate.ai"
Documentation = "https://memstate.ai/docs/integrations/langchain"
Repository = "https://github.com/memstate-ai/langchain-memstate"
"Bug Tracker" = "https://github.com/memstate-ai/langchain-memstate/issues"
Changelog = "https://github.com/memstate-ai/langchain-memstate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["langchain_memstate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
